[gd_scene load_steps=4 format=3 uid="uid://edoto0i0e5w1"]

[ext_resource type="Script" uid="uid://14y8wqlnmtt1" path="res://scenes/ui/building_selection.gd" id="1_t7pba"]
[ext_resource type="Texture2D" uid="uid://dk8j01pxa0sb" path="res://assets/UI/wood_icon.png" id="2_ygeo5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_caoak"]
atlas = ExtResource("2_ygeo5")
region = Rect2(39, 64, 49, 38)

[node name="BuildingSelection" type="PanelContainer"]
theme_type_variation = &"PanelContainerAlternative"
script = ExtResource("1_t7pba")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.61960787, 0.5294118, 0.4627451, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "Village"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_caoak")

[node name="CostLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.61960787, 0.5294118, 0.4627451, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "4"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.61960787, 0.5294118, 0.4627451, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 16
text = "Gathers wood"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select "
